<resources>
    <string name="app_name">Projeto</string>

    /*Cadastro Veiculos*/
    <string name="marcaveiculo">Marca do Veiculo</string>
    <string name="modeloveiculo">Modelo do Veiculo</string>
    <string name="placaveiculo">Placa do Veiculo</string>
    <string name="corveiculo">Cor do Veiculo</string>
    <string name="valorseguro">Valor do Seguro</string>
    <string name="valoraluguel">Valor do Aluguel</string>
    <string name="veiculocancel">Cancelar</string>
    <string name="veiculosave">Salvar</string>

    /*Cadastro Funcionario*/
    <string name="funcicancel">Cancelar</string>
    <string name="funcisave">Salvar</string>
    <string name="nomefunci">Nome</string>
    <string name="enderecofunci">Endereço</string>
    <string name="rgfunci">RG</string>
    <string name="cpffunci">CPF</string>
    <string name="supervisor">Supervisor</string>

    /*Cadastro Cliente*/
    <string name="nomecliente">Nome</string>
    <string name="enderecocliente">Endereço</string>
    <string name="rgcliente">RG</string>
    <string name="cpfcliente">CPF</string>
    <string name="cnh">CNH</string>
    <string name="numerodependentes">Numero de Dependentes</string>
    <string name="clientesave">Salvar</string>
    <string name="clientecancel">Cancelar</string>

    /*Clientes*/
    <string name="novocliente">Novo</string>
    <string name="removecliente">Remover</string>

    /*Funcionarios*/
    <string name="removefunci">Remover</string>
    <string name="novofunci">Novo</string>

    /*Veiculos*/
    <string name="removeveiculo">Remover</string>
    <string name="novoveiculo">Novo</string>
    <string name="btCliente">Clientes</string>
    <string name="btFuncionarios">Funcionarios</string>
    <string name="btVeiculos">Veiculos</string>


</resources>
