<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brunab.projeto.Telas.Cadastro_Clientes">

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="110dp"
        android:layout_height="66dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="cancelar"
        android:text="@string/clientecancel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/cNome"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nomecliente"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cEndereco"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enderecocliente"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cNome" />

    <EditText
        android:id="@+id/cRG"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/rgcliente"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cEndereco" />

    <EditText
        android:id="@+id/cCPF"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cpfcliente"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cRG" />

    <EditText
        android:id="@+id/cCNH"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cnh"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cCPF" />

    <EditText
        android:id="@+id/cDependentes"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/numerodependentes"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cCNH" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="110dp"
        android:layout_height="66dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:onClick="salvar"
        android:text="@string/clientesave"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>